# internal/api/blackhole.pb.go
@@ -1,18 +1,19 @@
 // Code generated by protoc-gen-go. DO NOT EDIT.
 // versions:
-// 	protoc-gen-go v1.28.1
+// 	protoc-gen-go v1.30.0
 // 	protoc        v3.21.12
 // source: blackhole.proto
 
 package api
 
 import (
+	reflect "reflect"
+	sync "sync"
+
 	_ "google.golang.org/genproto/googleapis/api/annotations"
 	protoreflect "google.golang.org/protobuf/reflect/protoreflect"
 	protoimpl "google.golang.org/protobuf/runtime/protoimpl"
 	emptypb "google.golang.org/protobuf/types/known/emptypb"
-	reflect "reflect"
-	sync "sync"
 )
 
 const (
@@ -69,6 +70,53 @@ func (x *DomainsRequest) GetDomains() []string {
 	return nil
 }
 
+type AddSourceRequest struct {
+	state         protoimpl.MessageState
+	sizeCache     protoimpl.SizeCache
+	unknownFields protoimpl.UnknownFields
+
+	Url string `protobuf:"bytes,1,opt,name=url,proto3" json:"url,omitempty"`
+}
+
+func (x *AddSourceRequest) Reset() {
+	*x = AddSourceRequest{}
+	if protoimpl.UnsafeEnabled {
+		mi := &file_blackhole_proto_msgTypes[1]
+		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+		ms.StoreMessageInfo(mi)
+	}
+}
+
+func (x *AddSourceRequest) String() string {
+	return protoimpl.X.MessageStringOf(x)
+}
+
+func (*AddSourceRequest) ProtoMessage() {}
+
+func (x *AddSourceRequest) ProtoReflect() protoreflect.Message {
+	mi := &file_blackhole_proto_msgTypes[1]
+	if protoimpl.UnsafeEnabled && x != nil {
+		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+		if ms.LoadMessageInfo() == nil {
+			ms.StoreMessageInfo(mi)
+		}
+		return ms
+	}
+	return mi.MessageOf(x)
+}
+
+// Deprecated: Use AddSourceRequest.ProtoReflect.Descriptor instead.
+func (*AddSourceRequest) Descriptor() ([]byte, []int) {
+	return file_blackhole_proto_rawDescGZIP(), []int{1}
+}
+
+func (x *AddSourceRequest) GetUrl() string {
+	if x != nil {
+		return x.Url
+	}
+	return ""
+}
+
 var File_blackhole_proto protoreflect.FileDescriptor
 
 var file_blackhole_proto_rawDesc = []byte{
@@ -81,25 +129,39 @@ var file_blackhole_proto_rawDesc = []byte{
 	0x2f, 0x65, 0x6d, 0x70, 0x74, 0x79, 0x2e, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x22, 0x2a, 0x0a, 0x0e,
 	0x44, 0x6f, 0x6d, 0x61, 0x69, 0x6e, 0x73, 0x52, 0x65, 0x71, 0x75, 0x65, 0x73, 0x74, 0x12, 0x18,
 	0x0a, 0x07, 0x64, 0x6f, 0x6d, 0x61, 0x69, 0x6e, 0x73, 0x18, 0x01, 0x20, 0x03, 0x28, 0x09, 0x52,
-	0x07, 0x64, 0x6f, 0x6d, 0x61, 0x69, 0x6e, 0x73, 0x32, 0xd7, 0x01, 0x0a, 0x09, 0x42, 0x6c, 0x61,
-	0x63, 0x6b, 0x68, 0x6f, 0x6c, 0x65, 0x12, 0x62, 0x0a, 0x05, 0x42, 0x6c, 0x6f, 0x63, 0x6b, 0x12,
-	0x2e, 0x2e, 0x64, 0x65, 0x6e, 0x69, 0x73, 0x64, 0x75, 0x62, 0x6f, 0x76, 0x69, 0x74, 0x73, 0x6b,
-	0x69, 0x79, 0x2e, 0x62, 0x6c, 0x61, 0x63, 0x6b, 0x68, 0x6f, 0x6c, 0x65, 0x2e, 0x61, 0x70, 0x69,
-	0x2e, 0x44, 0x6f, 0x6d, 0x61, 0x69, 0x6e, 0x73, 0x52, 0x65, 0x71, 0x75, 0x65, 0x73, 0x74, 0x1a,
-	0x16, 0x2e, 0x67, 0x6f, 0x6f, 0x67, 0x6c, 0x65, 0x2e, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x62, 0x75,
-	0x66, 0x2e, 0x45, 0x6d, 0x70, 0x74, 0x79, 0x22, 0x11, 0x82, 0xd3, 0xe4, 0x93, 0x02, 0x0b, 0x22,
-	0x06, 0x2f, 0x62, 0x6c, 0x6f, 0x63, 0x6b, 0x3a, 0x01, 0x2a, 0x12, 0x66, 0x0a, 0x07, 0x55, 0x6e,
-	0x62, 0x6c, 0x6f, 0x63, 0x6b, 0x12, 0x2e, 0x2e, 0x64, 0x65, 0x6e, 0x69, 0x73, 0x64, 0x75, 0x62,
+	0x07, 0x64, 0x6f, 0x6d, 0x61, 0x69, 0x6e, 0x73, 0x22, 0x24, 0x0a, 0x10, 0x41, 0x64, 0x64, 0x53,
+	0x6f, 0x75, 0x72, 0x63, 0x65, 0x52, 0x65, 0x71, 0x75, 0x65, 0x73, 0x74, 0x12, 0x10, 0x0a, 0x03,
+	0x75, 0x72, 0x6c, 0x18, 0x01, 0x20, 0x01, 0x28, 0x09, 0x52, 0x03, 0x75, 0x72, 0x6c, 0x32, 0x9a,
+	0x03, 0x0a, 0x09, 0x42, 0x6c, 0x61, 0x63, 0x6b, 0x68, 0x6f, 0x6c, 0x65, 0x12, 0x62, 0x0a, 0x05,
+	0x42, 0x6c, 0x6f, 0x63, 0x6b, 0x12, 0x2e, 0x2e, 0x64, 0x65, 0x6e, 0x69, 0x73, 0x64, 0x75, 0x62,
 	0x6f, 0x76, 0x69, 0x74, 0x73, 0x6b, 0x69, 0x79, 0x2e, 0x62, 0x6c, 0x61, 0x63, 0x6b, 0x68, 0x6f,
 	0x6c, 0x65, 0x2e, 0x61, 0x70, 0x69, 0x2e, 0x44, 0x6f, 0x6d, 0x61, 0x69, 0x6e, 0x73, 0x52, 0x65,
 	0x71, 0x75, 0x65, 0x73, 0x74, 0x1a, 0x16, 0x2e, 0x67, 0x6f, 0x6f, 0x67, 0x6c, 0x65, 0x2e, 0x70,
-	0x72, 0x6f, 0x74, 0x6f, 0x62, 0x75, 0x66, 0x2e, 0x45, 0x6d, 0x70, 0x74, 0x79, 0x22, 0x13, 0x82,
-	0xd3, 0xe4, 0x93, 0x02, 0x0d, 0x22, 0x08, 0x2f, 0x75, 0x6e, 0x62, 0x6c, 0x6f, 0x63, 0x6b, 0x3a,
-	0x01, 0x2a, 0x42, 0x38, 0x5a, 0x36, 0x67, 0x69, 0x74, 0x68, 0x75, 0x62, 0x2e, 0x63, 0x6f, 0x6d,
-	0x2f, 0x64, 0x65, 0x6e, 0x69, 0x73, 0x64, 0x75, 0x62, 0x6f, 0x76, 0x69, 0x74, 0x73, 0x6b, 0x69,
-	0x79, 0x2f, 0x62, 0x6c, 0x61, 0x63, 0x6b, 0x68, 0x6f, 0x6c, 0x65, 0x2f, 0x69, 0x6e, 0x74, 0x65,
-	0x72, 0x6e, 0x61, 0x6c, 0x2f, 0x61, 0x70, 0x69, 0x3b, 0x61, 0x70, 0x69, 0x62, 0x06, 0x70, 0x72,
-	0x6f, 0x74, 0x6f, 0x33,
+	0x72, 0x6f, 0x74, 0x6f, 0x62, 0x75, 0x66, 0x2e, 0x45, 0x6d, 0x70, 0x74, 0x79, 0x22, 0x11, 0x82,
+	0xd3, 0xe4, 0x93, 0x02, 0x0b, 0x3a, 0x01, 0x2a, 0x22, 0x06, 0x2f, 0x62, 0x6c, 0x6f, 0x63, 0x6b,
+	0x12, 0x66, 0x0a, 0x07, 0x55, 0x6e, 0x62, 0x6c, 0x6f, 0x63, 0x6b, 0x12, 0x2e, 0x2e, 0x64, 0x65,
+	0x6e, 0x69, 0x73, 0x64, 0x75, 0x62, 0x6f, 0x76, 0x69, 0x74, 0x73, 0x6b, 0x69, 0x79, 0x2e, 0x62,
+	0x6c, 0x61, 0x63, 0x6b, 0x68, 0x6f, 0x6c, 0x65, 0x2e, 0x61, 0x70, 0x69, 0x2e, 0x44, 0x6f, 0x6d,
+	0x61, 0x69, 0x6e, 0x73, 0x52, 0x65, 0x71, 0x75, 0x65, 0x73, 0x74, 0x1a, 0x16, 0x2e, 0x67, 0x6f,
+	0x6f, 0x67, 0x6c, 0x65, 0x2e, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x62, 0x75, 0x66, 0x2e, 0x45, 0x6d,
+	0x70, 0x74, 0x79, 0x22, 0x13, 0x82, 0xd3, 0xe4, 0x93, 0x02, 0x0d, 0x3a, 0x01, 0x2a, 0x22, 0x08,
+	0x2f, 0x75, 0x6e, 0x62, 0x6c, 0x6f, 0x63, 0x6b, 0x12, 0x6a, 0x0a, 0x09, 0x41, 0x64, 0x64, 0x53,
+	0x6f, 0x75, 0x72, 0x63, 0x65, 0x12, 0x30, 0x2e, 0x64, 0x65, 0x6e, 0x69, 0x73, 0x64, 0x75, 0x62,
+	0x6f, 0x76, 0x69, 0x74, 0x73, 0x6b, 0x69, 0x79, 0x2e, 0x62, 0x6c, 0x61, 0x63, 0x6b, 0x68, 0x6f,
+	0x6c, 0x65, 0x2e, 0x61, 0x70, 0x69, 0x2e, 0x41, 0x64, 0x64, 0x53, 0x6f, 0x75, 0x72, 0x63, 0x65,
+	0x52, 0x65, 0x71, 0x75, 0x65, 0x73, 0x74, 0x1a, 0x16, 0x2e, 0x67, 0x6f, 0x6f, 0x67, 0x6c, 0x65,
+	0x2e, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x62, 0x75, 0x66, 0x2e, 0x45, 0x6d, 0x70, 0x74, 0x79, 0x22,
+	0x13, 0x82, 0xd3, 0xe4, 0x93, 0x02, 0x0d, 0x3a, 0x01, 0x2a, 0x22, 0x08, 0x2f, 0x73, 0x6f, 0x75,
+	0x72, 0x63, 0x65, 0x73, 0x12, 0x55, 0x0a, 0x0e, 0x52, 0x65, 0x66, 0x72, 0x65, 0x73, 0x68, 0x53,
+	0x6f, 0x75, 0x72, 0x63, 0x65, 0x73, 0x12, 0x16, 0x2e, 0x67, 0x6f, 0x6f, 0x67, 0x6c, 0x65, 0x2e,
+	0x70, 0x72, 0x6f, 0x74, 0x6f, 0x62, 0x75, 0x66, 0x2e, 0x45, 0x6d, 0x70, 0x74, 0x79, 0x1a, 0x16,
+	0x2e, 0x67, 0x6f, 0x6f, 0x67, 0x6c, 0x65, 0x2e, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x62, 0x75, 0x66,
+	0x2e, 0x45, 0x6d, 0x70, 0x74, 0x79, 0x22, 0x13, 0x82, 0xd3, 0xe4, 0x93, 0x02, 0x0d, 0x3a, 0x01,
+	0x2a, 0x22, 0x08, 0x2f, 0x72, 0x65, 0x66, 0x72, 0x65, 0x73, 0x68, 0x42, 0x38, 0x5a, 0x36, 0x67,
+	0x69, 0x74, 0x68, 0x75, 0x62, 0x2e, 0x63, 0x6f, 0x6d, 0x2f, 0x64, 0x65, 0x6e, 0x69, 0x73, 0x64,
+	0x75, 0x62, 0x6f, 0x76, 0x69, 0x74, 0x73, 0x6b, 0x69, 0x79, 0x2f, 0x62, 0x6c, 0x61, 0x63, 0x6b,
+	0x68, 0x6f, 0x6c, 0x65, 0x2f, 0x69, 0x6e, 0x74, 0x65, 0x72, 0x6e, 0x61, 0x6c, 0x2f, 0x61, 0x70,
+	0x69, 0x3b, 0x61, 0x70, 0x69, 0x62, 0x06, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x33,
 }
 
 var (
@@ -114,18 +176,23 @@ func file_blackhole_proto_rawDescGZIP() []byte {
 	return file_blackhole_proto_rawDescData
 }
 
-var file_blackhole_proto_msgTypes = make([]protoimpl.MessageInfo, 1)
+var file_blackhole_proto_msgTypes = make([]protoimpl.MessageInfo, 2)
 var file_blackhole_proto_goTypes = []interface{}{
-	(*DomainsRequest)(nil), // 0: denisdubovitskiy.blackhole.api.DomainsRequest
-	(*emptypb.Empty)(nil),  // 1: google.protobuf.Empty
+	(*DomainsRequest)(nil),   // 0: denisdubovitskiy.blackhole.api.DomainsRequest
+	(*AddSourceRequest)(nil), // 1: denisdubovitskiy.blackhole.api.AddSourceRequest
+	(*emptypb.Empty)(nil),    // 2: google.protobuf.Empty
 }
 var file_blackhole_proto_depIdxs = []int32{
 	0, // 0: denisdubovitskiy.blackhole.api.Blackhole.Block:input_type -> denisdubovitskiy.blackhole.api.DomainsRequest
 	0, // 1: denisdubovitskiy.blackhole.api.Blackhole.Unblock:input_type -> denisdubovitskiy.blackhole.api.DomainsRequest
-	1, // 2: denisdubovitskiy.blackhole.api.Blackhole.Block:output_type -> google.protobuf.Empty
-	1, // 3: denisdubovitskiy.blackhole.api.Blackhole.Unblock:output_type -> google.protobuf.Empty
-	2, // [2:4] is the sub-list for method output_type
-	0, // [0:2] is the sub-list for method input_type
+	1, // 2: denisdubovitskiy.blackhole.api.Blackhole.AddSource:input_type -> denisdubovitskiy.blackhole.api.AddSourceRequest
+	2, // 3: denisdubovitskiy.blackhole.api.Blackhole.RefreshSources:input_type -> google.protobuf.Empty
+	2, // 4: denisdubovitskiy.blackhole.api.Blackhole.Block:output_type -> google.protobuf.Empty
+	2, // 5: denisdubovitskiy.blackhole.api.Blackhole.Unblock:output_type -> google.protobuf.Empty
+	2, // 6: denisdubovitskiy.blackhole.api.Blackhole.AddSource:output_type -> google.protobuf.Empty
+	2, // 7: denisdubovitskiy.blackhole.api.Blackhole.RefreshSources:output_type -> google.protobuf.Empty
+	4, // [4:8] is the sub-list for method output_type
+	0, // [0:4] is the sub-list for method input_type
 	0, // [0:0] is the sub-list for extension type_name
 	0, // [0:0] is the sub-list for extension extendee
 	0, // [0:0] is the sub-list for field type_name
@@ -149,6 +216,18 @@ func file_blackhole_proto_init() {
 				return nil
 			}
 		}
+		file_blackhole_proto_msgTypes[1].Exporter = func(v interface{}, i int) interface{} {
+			switch v := v.(*AddSourceRequest); i {
+			case 0:
+				return &v.state
+			case 1:
+				return &v.sizeCache
+			case 2:
+				return &v.unknownFields
+			default:
+				return nil
+			}
+		}
 	}
 	type x struct{}
 	out := protoimpl.TypeBuilder{
@@ -156,7 +235,7 @@ func file_blackhole_proto_init() {
 			GoPackagePath: reflect.TypeOf(x{}).PkgPath(),
 			RawDescriptor: file_blackhole_proto_rawDesc,
 			NumEnums:      0,
-			NumMessages:   1,
+			NumMessages:   2,
 			NumExtensions: 0,
 			NumServices:   1,
 		},
