# internal/api/blackhole.swagger.json
@@ -49,6 +49,73 @@
         ]
       }
     },
+    "/refresh": {
+      "post": {
+        "operationId": "Blackhole_RefreshSources",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "type": "object",
+              "properties": {}
+            }
+          },
+          "default": {
+            "description": "An unexpected error response.",
+            "schema": {
+              "$ref": "#/definitions/rpcStatus"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "type": "object",
+              "properties": {}
+            }
+          }
+        ],
+        "tags": [
+          "Blackhole"
+        ]
+      }
+    },
+    "/sources": {
+      "post": {
+        "operationId": "Blackhole_AddSource",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "type": "object",
+              "properties": {}
+            }
+          },
+          "default": {
+            "description": "An unexpected error response.",
+            "schema": {
+              "$ref": "#/definitions/rpcStatus"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/apiAddSourceRequest"
+            }
+          }
+        ],
+        "tags": [
+          "Blackhole"
+        ]
+      }
+    },
     "/unblock": {
       "post": {
         "operationId": "Blackhole_Unblock",
@@ -84,6 +151,14 @@
     }
   },
   "definitions": {
+    "apiAddSourceRequest": {
+      "type": "object",
+      "properties": {
+        "url": {
+          "type": "string"
+        }
+      }
+    },
     "apiDomainsRequest": {
       "type": "object",
       "properties": {
@@ -117,6 +192,7 @@
         "details": {
           "type": "array",
           "items": {
+            "type": "object",
             "$ref": "#/definitions/protobufAny"
           }
         }
