# internal/api/blackhole_grpc.pb.go
@@ -1,6 +1,6 @@
 // Code generated by protoc-gen-go-grpc. DO NOT EDIT.
 // versions:
-// - protoc-gen-go-grpc v1.2.0
+// - protoc-gen-go-grpc v1.3.0
 // - protoc             v3.21.12
 // source: blackhole.proto
 
@@ -8,6 +8,7 @@ package api
 
 import (
 	context "context"
+
 	grpc "google.golang.org/grpc"
 	codes "google.golang.org/grpc/codes"
 	status "google.golang.org/grpc/status"
@@ -19,12 +20,21 @@ import (
 // Requires gRPC-Go v1.32.0 or later.
 const _ = grpc.SupportPackageIsVersion7
 
+const (
+	Blackhole_Block_FullMethodName          = "/denisdubovitskiy.blackhole.api.Blackhole/Block"
+	Blackhole_Unblock_FullMethodName        = "/denisdubovitskiy.blackhole.api.Blackhole/Unblock"
+	Blackhole_AddSource_FullMethodName      = "/denisdubovitskiy.blackhole.api.Blackhole/AddSource"
+	Blackhole_RefreshSources_FullMethodName = "/denisdubovitskiy.blackhole.api.Blackhole/RefreshSources"
+)
+
 // BlackholeClient is the client API for Blackhole service.
 //
 // For semantics around ctx use and closing/ending streaming RPCs, please refer to https://pkg.go.dev/google.golang.org/grpc/?tab=doc#ClientConn.NewStream.
 type BlackholeClient interface {
 	Block(ctx context.Context, in *DomainsRequest, opts ...grpc.CallOption) (*emptypb.Empty, error)
 	Unblock(ctx context.Context, in *DomainsRequest, opts ...grpc.CallOption) (*emptypb.Empty, error)
+	AddSource(ctx context.Context, in *AddSourceRequest, opts ...grpc.CallOption) (*emptypb.Empty, error)
+	RefreshSources(ctx context.Context, in *emptypb.Empty, opts ...grpc.CallOption) (*emptypb.Empty, error)
 }
 
 type blackholeClient struct {
@@ -37,7 +47,7 @@ func NewBlackholeClient(cc grpc.ClientConnInterface) BlackholeClient {
 
 func (c *blackholeClient) Block(ctx context.Context, in *DomainsRequest, opts ...grpc.CallOption) (*emptypb.Empty, error) {
 	out := new(emptypb.Empty)
-	err := c.cc.Invoke(ctx, "/denisdubovitskiy.blackhole.api.Blackhole/Block", in, out, opts...)
+	err := c.cc.Invoke(ctx, Blackhole_Block_FullMethodName, in, out, opts...)
 	if err != nil {
 		return nil, err
 	}
@@ -46,7 +56,25 @@ func (c *blackholeClient) Block(ctx context.Context, in *DomainsRequest, opts ..
 
 func (c *blackholeClient) Unblock(ctx context.Context, in *DomainsRequest, opts ...grpc.CallOption) (*emptypb.Empty, error) {
 	out := new(emptypb.Empty)
-	err := c.cc.Invoke(ctx, "/denisdubovitskiy.blackhole.api.Blackhole/Unblock", in, out, opts...)
+	err := c.cc.Invoke(ctx, Blackhole_Unblock_FullMethodName, in, out, opts...)
+	if err != nil {
+		return nil, err
+	}
+	return out, nil
+}
+
+func (c *blackholeClient) AddSource(ctx context.Context, in *AddSourceRequest, opts ...grpc.CallOption) (*emptypb.Empty, error) {
+	out := new(emptypb.Empty)
+	err := c.cc.Invoke(ctx, Blackhole_AddSource_FullMethodName, in, out, opts...)
+	if err != nil {
+		return nil, err
+	}
+	return out, nil
+}
+
+func (c *blackholeClient) RefreshSources(ctx context.Context, in *emptypb.Empty, opts ...grpc.CallOption) (*emptypb.Empty, error) {
+	out := new(emptypb.Empty)
+	err := c.cc.Invoke(ctx, Blackhole_RefreshSources_FullMethodName, in, out, opts...)
 	if err != nil {
 		return nil, err
 	}
@@ -59,6 +87,8 @@ func (c *blackholeClient) Unblock(ctx context.Context, in *DomainsRequest, opts 
 type BlackholeServer interface {
 	Block(context.Context, *DomainsRequest) (*emptypb.Empty, error)
 	Unblock(context.Context, *DomainsRequest) (*emptypb.Empty, error)
+	AddSource(context.Context, *AddSourceRequest) (*emptypb.Empty, error)
+	RefreshSources(context.Context, *emptypb.Empty) (*emptypb.Empty, error)
 	mustEmbedUnimplementedBlackholeServer()
 }
 
@@ -71,6 +101,12 @@ func (UnimplementedBlackholeServer) Block(context.Context, *DomainsRequest) (*em
 }
 func (UnimplementedBlackholeServer) Unblock(context.Context, *DomainsRequest) (*emptypb.Empty, error) {
 	return nil, status.Errorf(codes.Unimplemented, "method Unblock not implemented")
+}
+func (UnimplementedBlackholeServer) AddSource(context.Context, *AddSourceRequest) (*emptypb.Empty, error) {
+	return nil, status.Errorf(codes.Unimplemented, "method AddSource not implemented")
+}
+func (UnimplementedBlackholeServer) RefreshSources(context.Context, *emptypb.Empty) (*emptypb.Empty, error) {
+	return nil, status.Errorf(codes.Unimplemented, "method RefreshSources not implemented")
 }
 func (UnimplementedBlackholeServer) mustEmbedUnimplementedBlackholeServer() {}
 
@@ -95,7 +131,7 @@ func _Blackhole_Block_Handler(srv interface{}, ctx context.Context, dec func(int
 	}
 	info := &grpc.UnaryServerInfo{
 		Server:     srv,
-		FullMethod: "/denisdubovitskiy.blackhole.api.Blackhole/Block",
+		FullMethod: Blackhole_Block_FullMethodName,
 	}
 	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
 		return srv.(BlackholeServer).Block(ctx, req.(*DomainsRequest))
@@ -113,10 +149,46 @@ func _Blackhole_Unblock_Handler(srv interface{}, ctx context.Context, dec func(i
 	}
 	info := &grpc.UnaryServerInfo{
 		Server:     srv,
-		FullMethod: "/denisdubovitskiy.blackhole.api.Blackhole/Unblock",
+		FullMethod: Blackhole_Unblock_FullMethodName,
 	}
 	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
 		return srv.(BlackholeServer).Unblock(ctx, req.(*DomainsRequest))
+	}
+	return interceptor(ctx, in, info, handler)
+}
+
+func _Blackhole_AddSource_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
+	in := new(AddSourceRequest)
+	if err := dec(in); err != nil {
+		return nil, err
+	}
+	if interceptor == nil {
+		return srv.(BlackholeServer).AddSource(ctx, in)
+	}
+	info := &grpc.UnaryServerInfo{
+		Server:     srv,
+		FullMethod: Blackhole_AddSource_FullMethodName,
+	}
+	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
+		return srv.(BlackholeServer).AddSource(ctx, req.(*AddSourceRequest))
+	}
+	return interceptor(ctx, in, info, handler)
+}
+
+func _Blackhole_RefreshSources_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
+	in := new(emptypb.Empty)
+	if err := dec(in); err != nil {
+		return nil, err
+	}
+	if interceptor == nil {
+		return srv.(BlackholeServer).RefreshSources(ctx, in)
+	}
+	info := &grpc.UnaryServerInfo{
+		Server:     srv,
+		FullMethod: Blackhole_RefreshSources_FullMethodName,
+	}
+	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
+		return srv.(BlackholeServer).RefreshSources(ctx, req.(*emptypb.Empty))
 	}
 	return interceptor(ctx, in, info, handler)
 }
@@ -135,6 +207,14 @@ var Blackhole_ServiceDesc = grpc.ServiceDesc{
 		{
 			MethodName: "Unblock",
 			Handler:    _Blackhole_Unblock_Handler,
+		},
+		{
+			MethodName: "AddSource",
+			Handler:    _Blackhole_AddSource_Handler,
+		},
+		{
+			MethodName: "RefreshSources",
+			Handler:    _Blackhole_RefreshSources_Handler,
 		},
 	},
 	Streams:  []grpc.StreamDesc{},
